<resources>
    <string name="app_name">FoodMandu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Favourite</string>
    <string name="menu_slideshow">My Basket</string>
    <string name="menu_tools">Order history</string>
    <string name="menu_share">Notification</string>
    <string name="menu_more">More</string>

</resources>
